<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:context=".VideoEditingActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#CCA07777"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_home_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#CCA07777"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/save_video"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_save_color_24" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/textConfigs"
        android:layout_below="@+id/toolbar"
        app:use_controller="false" />

    <LinearLayout
        android:id="@+id/textConfigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekerContainer"
        android:background="#CCA07777"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/seekerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editingControls"
        android:background="#CCA07777"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/default_time_stamp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frameRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.tharunbirla.videoeditor.customviews.CustomVideoSeeker
                android:id="@+id/customVideoSeeker"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editingControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#CCA07777"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnTrim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_overly"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_split_24" />

        <ImageButton
            android:id="@+id/btnMerge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/merge_video"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_add_photos_24" />

        <ImageButton
            android:id="@+id/btnCrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/crop_video"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_crop_24" />

        <ImageButton
            android:id="@+id/btnText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_text_24" />

        <ImageButton
            android:id="@+id/btnAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_audio"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_audio_24" />

    </LinearLayout>

    <include
        layout="@layout/loading_screen"
        android:id="@+id/loadingScreen"
        android:visibility="gone"/>
</RelativeLayout>
